--- a/templates/item_cliente.html
+++ b/templates/item_cliente.html
@@ -1,5 +1,5 @@
-<tr>
-    <th scope="row">{{ cliente.id }}</th>
+<tr id="cliente-{{cliente.id}}">
+    <th scope="row" >{{ cliente.id }}</th>
     <td>{{ cliente.nome }}</td>
     <td>{{ cliente.email }}</td>
     <td>
