--- a/templates/form_cliente.html
+++ b/templates/form_cliente.html
@@ -1,31 +1,19 @@
-<form class="c-form"
-    {% if cliente %}
-        action="{{ url_for('cliente.atualizar_cliente', cliente_id=cliente.id) }}"
-    {% else %}
-        action="{{ url_for('cliente.inserir_cliente') }}"
-    {% endif %}
-
-    method="{% if cliente %}PUT{% else %}POST{% endif %}"
-
-    {% if cliente %}
-        c-swap="#cliente-{{cliente.id}}"
-    {% else %}
-        c-append="#lista-clientes"
-    {% endif %}
-
-    c-reload-container="true">
+<form class="c-form" {% if cliente %} action="{{ url_for('cliente.atualizar_cliente', cliente_id=cliente.id) }}" {% else
+    %} action="{{ url_for('cliente.inserir_cliente') }}" {% endif %}
+    method="{% if cliente %}PUT{% else %}POST{% endif %}" {% if cliente %} c-swap="#cliente-{{cliente.id}}" {% else %}
+    c-append="#lista-clientes" {% endif %} c-reload=true>
 
     <div class="mb-3">
         <label class="form-label">Nome</label>
-        <input type="text" class="form-control" name="nome" {% if cliente%}value="{{cliente.nome}}"{% endif %}>
-      </div>
-  
-      <div class="mb-3">
-          <label id="label-target" class="form-label">Email</label>
-          <input type="emnail" class="form-control" name="email" {% if cliente%}value="{{cliente.email}}"{% endif %}>
-      </div>
+        <input type="text" class="form-control" name="nome" {% if cliente%}value="{{cliente.nome}}" {% endif %}>
+    </div>
 
-    <button type="submit" class="btn btn-primary">
-        {% if cliente %}Salvar{% else %}Criar{% endif %}
+    <div class="mb-3">
+        <label id="label-target" class="form-label">Email</label>
+        <input type="email" class="form-control" name="email" {% if cliente%}value="{{cliente.email}}" {% endif %}>
+    </div>
+
+    <button type="submit" class="btn btn-primary" c-target="#lista-clientes">
+        {% if cliente %}Salvar {% else %} Criar {% endif %}
     </button>
 </form>
